fix display of powered-by when ticker not visible

--- a/src/sa_web/static/css/style.css
+++ b/src/sa_web/static/css/style.css
@@ -1221,22 +1221,6 @@ ul.recent-points {
   #map-container {
     bottom: 0;
   }
-  #powered-by {
-    line-height: 3em;
-    text-align: center;
-    width: 18em;
-    height: 4.75em;
-    right: -4px;
-    bottom: 2em;
-    border-right: 4px solid #777;
-    left: auto;
-    overflow: hidden;
-    box-shadow: -4px 4px 0 rgba(85, 85, 85, 0.5), inset 0 1px 0 rgba(255,255,255,0.25);
-  }
-  #powered-by .nowrap {
-    display: block;
-    margin-top: -1.5em;
-  }
 
   #site-header a,
   #site-header button,
@@ -1292,8 +1276,19 @@ ul.recent-points {
     display: block;
   }
   .activity-enabled #powered-by {
-    bottom: 0;
+    line-height: 3em;
+    text-align: center;
+    width: 18em;
+    height: 4.75em;
+    right: -4px;
+    border-right: 4px solid #777;
+    left: auto;
+    overflow: hidden;
     box-shadow: 0 -4px 0 rgba(85, 85, 85, 0.5), inset 0 1px 0 rgba(255,255,255,0.25);
+  }
+  .activity-enabled #powered-by .nowrap {
+    display: block;
+    margin-top: -1.5em;
   }
   #user-menu {
     padding-top: 0.75em;
